# bummer-engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  vcpkg.json
assets/animations/: alien_anim.json  player_anim.json
assets/sounds/zapsplat/: README.txt
etc/: README.md  controller_map.json  run_config.json  scancode_map.json
etc/input_maps/: controller_map.json  scancode_map.json
etc/templates/: alien.json  alien2.json  alien3.json  alien4.json  alien5.json  ground.json  platform.json  platform2.json  platform3.json  player.json  player_anim.json
etc/templates/attacks/: alien_basic.json  basic.json
etc/templates/home/: home_scene.json
etc/templates/home/entities/: ground.json  platform2.json  platform3.json  platform4.json
etc/templates/level_01/: level.json  level_01.json
etc/templates/level_01/entities/: ground.json
etc/templates/level_02/: level.json
etc/templates/level_03/: level.json
etc/templates/level_one/: level_one.json
etc/templates/level_one/entities/: ground.json  platform2.json
src/: Config.cpp  Config.h  Utils.cpp  Utils.h  main.cpp
src/ECS/: Components.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  EventManager.cpp  EventManager.h  SceneManager.cpp  SceneManager.h  StateMachine.cpp  StateMachine.h
src/GameEngine/: GameEngine.cpp  GameEngine.h
src/Resources/: ResourceUtils.cpp  ResourceUtils.h  TextureManager.cpp  TextureManager.h
src/Systems/: AISystem.cpp  AISystem.h  AnimationSystem.cpp  AnimationSystem.h  AttackSystem.cpp  AttackSystem.h  Camera.cpp  Camera.h  CollisionSystem.cpp  CollisionSystem.h  CooldownSystem.cpp  CooldownSystem.h  InputSystem.cpp  InputSystem.h  LevelSystem.h  MovementSystem.cpp  MovementSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h  SoundSystem.cpp  SoundSystem.h
src/UI/: Menu.cpp  Menu.h  SplashScreen.cpp  SplashScreen.h
tests/: CMakeLists.txt  Test_AISystem.cpp  Test_AnimationSystem.cpp  Test_AttackSystem.cpp  Test_CollisionSystem.cpp  Test_CooldownSystem.cpp  Test_EntityManager.cpp  Test_EventManager.cpp  Test_InputSystem.cpp  Test_Menu.cpp  Test_MovementSystem.cpp  Test_PhysicsSystem.cpp  Test_RenderSystem.cpp  Test_ResourceUtils.cpp  Test_SceneManager.cpp  Test_SoundSystem.cpp  Test_StateMachine.cpp  Test_Utils.cpp  main.cpp  test_engine.cpp  test_resources.cpp  test_ui.cpp
tests/data/: test_anim.json  test_template.json
web/: CMakeLists.txt
